src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

html body, html input, html button, html select, html textarea{font-family: "Inter", sans-serif; font-weight: 500; line-height: 1.42857143; color: #21232c;}

* {
  margin: 0;
  padding: 0;
  outline: 0;
  text-decoration: none;
  list-style: none;
  box-sizing: border-box;
}

/* ---------- SIGN IN ---------- */
.sign-in__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  padding: 30px 0;
}
.signinwrapper-layout {height: calc(100vh - 145px); display: flex; align-items: center; padding-bottom: 30px;}
.signinwrapper-inner{display: flex; align-items: center; justify-content: center; flex-direction: column;}

.sign-in__backdrop {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.3);
}

.sign-in__wrapper form {
  width: 24rem;
  max-width: 90%;
  z-index: 1;
  animation: showSignInForm 1s;
  position: relative;
  z-index: 1;
}

.sign-in__wrapper form img {
  width: 4rem;
}

@keyframes showSignInForm {

  0%,
  30% {
    transform: translate(0, -150%);
  }

  70%,
  90% {
    transform: translate(0, 1rem);
  }

  80%,
  100% {
    transform: translate(0, 0);
  }
}

.form-control{height: 36px;}
.sidebar {
  color: 1px solid red;
}

.main {
  /* margin-left: 5%; */
  margin-top: 2%;
}

#root {
  padding: 0; margin: 0;
}

/* Login Screen */
.logheader {position: relative; top:0; left:0; width: 350px; z-index: 1; margin-bottom: 40px;}
.logheader img{width: auto; max-width: 100%; height: auto;}
.logformhead{display: flex; align-items: center; justify-content: center;}
.logformheadimg{margin-right: 15px;}
.logformheadimg img{margin: 0;}
.logformhead .h4{margin: 0;}
.loginformblock .form-group {margin-bottom: 10px;}
.loginformblock .form-group .col-form-label{padding-bottom: 0;width: 100%;}
.loginformblock .form-control{border-radius: 0;}
.loginformblock .form-control:focus, .loginformblock .form-control:active {background: transparent; outline: 0; box-shadow: none;}

.loginfooter{position: relative;  padding-bottom: 30px; width: 100%; z-index: 1;}
.loginfooter-inner {background-color: #fff; border-radius: 5px; padding: 15px 30px;}
.loginfooter-row {display: flex; align-items: center; justify-content: space-between;}
.loginfooter-btmlink {padding-top: 15px;}
.loginfooter-link {margin: 0; padding: 0; display: flex; align-items: center;}
.loginfooter-link li{padding: 0 10px; position: relative;}
.loginfooter-link li:first-child{padding-left: 0;}
.loginfooter-link li:first-child:after{display: none;}
.loginfooter-link li:after{content: ''; position: absolute; left: 0; top: 0; width: 1px; height: 20px; background-color: #21232c;}
.loginfooter-link li a{color:#21232c;}
.oraccessquickly{position: relative;}
.oraccessquickly:after {content: ''; position: absolute; left: 0; top: 50%; width: 100%; height: 1px; background-color: #ddd; margin-top: -1px; z-index: -1;}
.oraccessquickly span{background-color: #fff; padding: 0 15px;}
.oraccessquicklybtn{display: flex; align-items: center; justify-content: center;}
.oraccessquicklybtn .btn{display: block; background-color: #ddd; color: #444; border: none; width: 120px; font-size: 14px; font-weight: bold; margin: 0 5px; text-decoration: none;}
.oraccessquicklybtn .btn:hover{text-decoration: none; background-color: #212529; color: #fff;}


/* Main Content */
html, body{overflow: hidden;}
.maincontent{width: 100%;}
.pdstage-mainarea {display: flex; flex-direction: column; height: 100%; overflow: hidden;}
.mainlayout{position: relative; display: flex; flex-direction: row; max-width: 100%; height: 100vh;}
.maincontentinner{height: 100%; display: flex; flex-direction: column; overflow: hidden auto;}
.maincontentinner .gdnJsS, .maincontentinner .dVEiRS{min-width: auto;}


.toolbutton-grprow{display: flex; align-items: center;}
.toolbarview-actionsrow{display: flex;}
.toolbutton-group{display: flex; margin-right: 10px;;}
.toolbutton-group button{position: relative; display: inline-flex; align-items: center; justify-content: center; background-color: #fff; text-align: center; height: 32px; border: 1px solid rgba(33,35,44,.24); border-radius: 0; box-shadow: 0 1px 2px 0 rgb(42 54 71/5%); cursor: pointer; margin: 0; padding: 6px 15px 6px 15px; text-decoration: none; transition: background .1s cubic-bezier(.5,0,.2,1); -webkit-user-select: none; -moz-user-select: none; user-select: none; vertical-align: top;}
.toolbutton-group .toolpipebtn, .toolbutton-group .toolpipebtn:focus{border-radius: 4px; color: #fff;}
.toolbutton-group .toolpipebtn:hover, .toolbutton-group .toolpipebtn:focus{ color: #fff;}
.toolbutton-group .toolpipebtn.dropdown-toggle::after{display: none;}
.toolbutton-group .tooltimebtn{border-radius: 0 4px 4px 0;}
.toolbutton-group .tooldealbtn{border-left: 0; border-right: 0;}
.toolbutton-group .activetoolbtn{border-color: #0d68c5; color:#0d68c5;}
.toolbutton-group .toolpipebtn svg.fa-chart-simple{transform: rotate(180deg);}
.toolbarview-actionsrow .btn-success{height: 32px; padding: 3px 10px;}
.toolbarview-summery{display: flex;align-items: center; justify-content: end;}
.toolsummary-deals{margin-right: 10px;}
.toolsummary-deals span{margin:0 5px;}
.toolbarview-filtersrow{display: flex;}

.pipeselectbtngroup{display: flex; margin-right: 8px;}
.pipeselectbox{position: relative;}
.pipeselect{position: relative; display: inline-flex; align-items: center; justify-content: center; background-color: #fff; text-align: center; height: 32px; border: 1px solid rgba(33,35,44,.24); border-radius: 4px; box-shadow: 0 1px 2px 0 rgb(42 54 71/5%); cursor: pointer; margin: 0; padding: 6px 30px 6px 10px; text-decoration: none; transition: background .1s cubic-bezier(.5,0,.2,1); -webkit-user-select: none; -moz-user-select: none; user-select: none; vertical-align: top;}
/* ... */

